# orion-chat-rs

./: .dockerignore  .gitignore  API_COVERAGE.md  CHANGELOG.md  Dockerfile  README.md  WEB_API_IMPLEMENTATION_PLAN.md  check_api_coverage.sh  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: PWA_STREAMING_ARCHITECTURE.md  deployment.md  optimization.md
docs/plans/: 2026-03-01-chatbot-shadcn-style-design.md  2026-03-01-chatbot-shadcn-style-plan.md  2026-03-01-orion-chat-design.md  2026-03-01-orion-chat-plan.md  2026-03-04-shadcn-ui-redesign-plan.md  2026-03-04-shadcn-ui-redesign.md  2026-03-08-assistants-conversation-binding-design.md  2026-03-08-assistants-conversation-binding-plan.md  2026-03-08-auto-updater-design.md  2026-03-08-auto-updater-ops.md  2026-03-08-auto-updater-plan.md  2026-03-08-conversation-sidebar-assistant-tag-design.md  2026-03-08-conversation-sidebar-assistant-tag-plan.md  2026-03-08-i18n-language-consistency.md  2026-03-08-message-pagination-design.md  2026-03-08-message-pagination-plan.md  2026-03-08-message-virtualization-design.md  2026-03-08-message-virtualization-plan.md  2026-03-08-paste-external-storage-design.md  2026-03-08-paste-external-storage-plan.md  2026-03-08-sidebar-search-mode-design.md  2026-03-08-sidebar-search-mode-plan.md  2026-03-08-streaming-markdown-design.md  2026-03-08-streaming-markdown-plan.md  2026-03-08-tauri-mobile-migration-plan.md  2026-03-10-updater-key-rotation.md  2026-03-11-version-compare-panel-design.md  2026-03-11-version-compare-view-plan.md  2026-03-13-manual-model-entry-design.md  2026-03-13-manual-model-entry-plan.md  2026-03-13-web-pwa-design-part2.md  2026-03-13-web-pwa-design-part3.md  2026-03-13-web-pwa-design-part4.md  2026-03-13-web-pwa-migration-design.md  2026-03-14-conversation-switch-streaming-design.md  2026-03-14-conversation-switch-streaming-plan.md  2026-03-15-agent-skills-research.md  2026-03-15-conversation-model-memory-design.md  2026-03-15-conversation-model-memory-plan.md  2026-03-15-model-selector-zoom-clipping-design.md  (+3 more)
docs/superpowers/plans/: 2026-03-17-yoagent-phase0-backend-core.md  2026-03-17-yoagent-phase1-frontend-ui.md  2026-03-17-yoagent-phase2-settings.md  2026-03-17-yoagent-phase3-mcp.md  2026-03-19-conversation-working-dirs.md  2026-03-19-shadcn-theme-presets.md  2026-03-22-pwa-docker-deployment.md
docs/superpowers/specs/: 2026-03-17-yoagent-execution-agent-design.md  2026-03-19-conversation-working-dirs-design.md  2026-03-19-shadcn-theme-presets-design.md  2026-03-20-worker-first-agent-chat-design.md  2026-03-22-pwa-docker-deployment-design.md
src/: app.css  app.html  viteMacos12Compat.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/yoagent/src/: agent_loop.rs
src-tauri/crates/yoagent/src/provider/: openai_compat.rs
src-tauri/crates/yoagent/src/tools/: edit.rs  file.rs  list.rs  mod.rs  path.rs  search.rs
src-tauri/crates/yoagent/tests/: tools_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: channel.rs  error.rs  lib.rs  main.rs  paste_storage.rs  state.rs
src-tauri/src/agent/: commands.rs  config.rs  events.rs  mcp.rs  mod.rs  permissions.rs  skills.rs  storage.rs
src-tauri/src/commands/: assistant.rs  chat.rs  conversation.rs  export.rs  mod.rs  provider.rs  search.rs  settings.rs
src-tauri/src/core/: assistant.rs  chat.rs  conversation.rs  mod.rs  provider.rs
src-tauri/src/db/: assistants.rs  conversations.rs  messages.rs  migrations.rs  mod.rs  paste_blobs.rs
src-tauri/src/models/: agent.rs  assistant.rs  conversation.rs  message.rs  mod.rs  provider.rs  search.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/web_server/: background_tasks.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
src/lib/: themeCssContract.test.js
src/lib/api/: agent.ts  agentApiContract.test.js  platform.ts
src/routes/: +layout.svelte  +page.svelte  layoutThemeContract.test.js
static/: manifest.json  sw.js
(+74 files in other folders)
