[workspace]
members = [".", "crates/yoagent"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package]
name = "orion-chat-rs"
version = "0.5.0"
description = "Orion Chat - A Tauri v2 desktop chat application"
authors = ["you"]
edition = "2021"

[lib]
name = "orion_chat_rs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
futures-util = "0.3"
dirs = "6"
yoagent = { path = "crates/yoagent" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
