[package]
name = "orion-chat-rs"
version = "0.4.2"
description = "Orion Chat - A Tauri v2 desktop chat application"
authors = ["you"]
edition = "2021"

[lib]
name = "orion_chat_rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[features]
default = ["desktop"]
desktop = [
    "dep:tauri-build",
    "dep:tauri",
    "dep:tauri-plugin-store",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-autostart",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-store = { version = "2", optional = true }
tauri-plugin-shell = { version = "2.3.5", optional = true }
tauri-plugin-dialog = { version = "2.6.0", optional = true }
tauri-plugin-fs = { version = "2.4.5", optional = true }
tauri-plugin-autostart = { version = "2.5.1", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
futures-util = "0.3"
dirs = "6"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
chrono = "0.4"
tracing-subscriber = "0.3"
async-stream = "0.3"
futures = "0.3"
